# leaf-disease-classification-on-azure-app-service

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  dvc.yaml  implementation_note.ipynb  main.py  params.yaml  pyproject.toml  requirements.txt  scores.json  setup.cfg  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_base_model_development.ipynb  03_model_training.ipynb  04_model_evaluation_with_mlflow.ipynb  05_prediction.ipynb
src/leafClassifier/: __init__.py
src/leafClassifier/components/: data_ingestion.py  model_evaluation_mlflow.py  model_trainer.py  prepare_base_model.py
src/leafClassifier/config/: configuration.py
src/leafClassifier/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_trainer.py  stage_04_model_evaluation.py
src/leafClassifier/utils/: common.py
templates/: index.html
