[metadata]
name = mango-leaf-health-classifier
version = 0.1.0
description = "End-to-End Deep Learning Web Application for Mango Leaf Disease Classification with CI/CD Deployment on Azure App Service"
long_description = file: README.md
long_description_content_type = text/markdown
author = Olumide Olumayegun
author_email = midemayegun@yahoo.co.uk
license = "MIT"
url = "https://github.com/OlumideOlumayegun/leaf-disease-classification-on-azure-app-service.git"
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.11
install_requires =
    tensorflow>=2.12.0
    pandas
    gdown
    dvc
    mlflow>=2.2.2
    notebook
    numpy
    matplotlib
    seaborn
    python-box>=6.0.2
    pyYAML
    tqdm
    ensure>=1.0.2
    joblib
    types-PyYAML
    scipy
    Flask
    Flask-Cors
    dagshub

[options.packages.find]
where = src
